ressources/sass/layout/_accueil.scss
/**
* @author Gabriel Caron <gabriel.caron@gmail.com>
* @version 6.0
*
* ------------------
* TABLE DES MATIERES
* ------------------
* ACCUEIL
*
*
*/

.accueil {

  .entete {
    padding-bottom: 0;
  }

  &__accroche {
    font-family: $RobotoMedium;
    font-style: normal;
    font-weight: 500;
    font-size: 5rem;
    line-height: 110%;
    letter-spacing: $EspacementStandard;
    text-align: center;
    color: #000000;
    text-shadow: -1px -1px 3px #FFFFFF, 2px 2px 3px rgba(0, 0, 0, 0.15);
    margin: 5rem 0 0 0;

    @media screen and (min-width: 500px) {
      font-size: 5.5rem;
      padding: 0 3rem;
    }
    @media screen and (min-width: 850px) {
      font-size: 6rem;
    }
    @media screen and (min-width: $tablet900px) {
      margin: 20rem 0 0 0;
    }

    @media screen and (min-width: $desktop1200px) {
      margin: 25rem 0 0 0;
    }
  }

  &__hashtags {
    text-align: center;
    margin-bottom: 10rem;
    color: $gris25;

    @media screen and (min-width: $tablet900px) {
      margin-bottom: 15rem;
    }

	  @media screen and (min-width: $desktop1200px) {
		  margin-bottom: 20rem;
	  }
  }

  &__coeur {
    height: 4.5rem;
    vertical-align: top;

    @media screen and (min-width: 850px) {
      height: 6rem;
    }
  }


  .projets {
    @include rangeeGrid12col($tablet900px);
    align-items: flex-start;
    @media screen and (max-width: 899px) {
      @include paddingConteneur;
    }

    &__conteneurDemiGrille {

      @supports (grid-template-columns: minmax(auto, $tablet900px)) {
        @media screen and (min-width: $tablet900px) {
          display: grid;
          grid-template-columns: minmax(auto, 690px);
          column-gap: 20px;
        }
      }

      &.web-applis {
        grid-column: 1 / 7;
        justify-content: flex-end;
        border-left: 0;
        @media screen and (min-width: $tablet900px) {
          @include bulle();
          border-radius: 0 $arrondiTable $arrondiTable 0;
        }
      }

      &.design-graphique {
        grid-column: 7 / 13;
        justify-content: flex-start;
        border-right: 0;
        @media screen and (min-width: $tablet900px) {
          @include bulle();
          border-radius: $arrondiTable 0 0 $arrondiTable;
        }
      }
    }

    &__web-applis {
      padding: 0 3rem 0 3rem;
      @media screen and (min-width: $mobile600px) {
        padding: 0 3rem 0 0;
      }
    }

    &__design-graphique {
      padding: 0 3rem 0 3rem;
      @media screen and (min-width: $mobile600px) {
        padding: 0 0 0 3rem;
      }
    }

    // Navigation spécifique à l'accueil

    .navigation {

      &.web-applis {
        @include rangeeGrid12col($tablet900px);

        & .titre {
          grid-column: 2 / 13;

          @media screen and (min-width: 1000px) {
            grid-column: 3 / 13;
          }
        }

        & .rangeeProjets {
          grid-column: 2 / 13;

          @media screen and (min-width: 1000px) {
            grid-column: 3 / 13;
          }
        }
      }

      &.design-graphique {
        @include rangeeGrid12col($tablet900px);

        & .titre {
          grid-column: 1 / 12;

          @media screen and (min-width: 1000px) {
            grid-column: 1 / 11;
          }
        }

        & .rangeeProjets {
          grid-column: 1 / 12;

          @media screen and (min-width: 1000px) {
            grid-column: 1 / 11;
          }
        }
      }

      &__lien-section {
        text-decoration: none;
        color: $noir;
        @media screen and (min-width: $desktop1100px) {
          &:hover {
            .navigation__titre-section {
              &::after {
                margin-left: 2.5rem;
              }
            }
          }
        }
      }

      &__titre-section {
        margin: 3rem 0 1rem 2rem;
        font-size: 4rem;

        @media screen and (min-width: $desktop1100px) {
          &::after {
            background: url("../images/icones/fleche-section.svg") no-repeat center;
            height: 3.5rem;
            width: 3.5rem;
            display: inline-block;
            vertical-align: middle;
            margin-left: 1.5rem;
            content: "";
            transition: all 200ms ease-in-out;
          }
        }
      }

      &__liste {
        list-style-type: none;
        padding: 0;

        @include rangeeGrid12col();

        & > * {
          grid-column: span 6;
          vertical-align: top; // Version mobile
        }
      }
    }
  }
}

